Revert "重构utils包并优化主界面逻辑"
This reverts commit 9b1a2551967ab2741aa12e22046db92a7bdabea4.